# yoga-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
.cursor/rules/: python-fastapi-standards.mdc
app/: dependency_injector.py  main.py  profile_extraction.py
app/agents/: posture_correction_agent.py  request_reviewer.py  reviewer_agent.py  sequence_composer.py  summary_agent.py  yoga_agent.py  yoga_coordinator.py
app/auth/: FRONTEND.md  auth_interfaces.py  auth_router.py  auth_service.py  helpers.py  jwt_middleware.py  settings.py
app/core/: json_encoder.py
app/database/: mongo.py
app/globals/: constants.py  error_payload.py  errors.py  exception_handlers.py  functions.py
app/health/: health_router.py
app/llms/: gemini_client.py  openai_client.py  openai_policy.py
app/logs/: api_call_logger.py
app/middlewares/: __init__.py  auth.py
app/orchestration/: graph.py  nodes.py  profile.py  profile_helpers.py  runner.py  state.py
app/posture_docs/: UNILATERAL_TRANSITION_ANOMALIES_AND_FIXES.md  all_postures.py  downward_dog.py  inversion_postures.py  prone_postures.py  seated_postures.py  seed_database.py  standing_postures.py  supine_postures.py  warmup_postures.py
app/prompts/: __init__.py  active.py  custom_sequence.py  developer.py  ending.py  introduction.py  medical_conditions_laws.py  profile_summaries.py  prompts.py  summary_system.py  transition.py  version.py
app/query/: query_router.py  query_service.py
app/schemas/: auth.py  (+10 more)
scripts/: docker_startup_seeds.py  docker_wait_mongo.py
(+95 files in other folders)
