[project]
name = "yoga-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all]>=0.135.1",
    "uvicorn>=0.41.0",
    "python-dotenv>=1.2.2",
    "motor>=3.7.1",
    "langchain>=1.2.10",
    "pydantic>=2.11.7",
    "openai>=1.78.1",
    "google>=3.0.0",
    "google-genai>=1.66.0",
    "email-validator>=2.3.0",
    "langgraph>=0.6.11",
]

[tool.black]
line-length = 180
target-version = ['py310']
include = '\.pyi?$'

[dependency-groups]
dev = [
    "black>=26.3.0",
]
